--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "publish": "next build && node ./scripts/generate-sitemap && next export && touch out/.nojekyll && git add out/ && git commit -m 'deploy' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
@@ -40,11 +41,13 @@
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
     "tailwindcss": "^3.0.23",
-    "unist-util-visit": "^4.0.0"
+    "unist-util-visit": "^4.0.0",
+    "use-constant": "^1.1.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.1.4",
     "@svgr/webpack": "^6.1.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
     "eslint": "^7.29.0",
