--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
-  "version": "1.5.6",
-  "private": true,
+  "name": "homepage_for_interactive_computing_lab_at_kaist",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
-    "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
     "dev": "next dev",
     "build": "next build && node ./scripts/generate-sitemap && next export && touch out/.nojekyll",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
