--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,8 @@ jobs:
           node-version: "16"
       - name: Install dependencies
         run: npm install
+      - name: Lint the Code
+        run: npm run lint
       - name: Build with Next.js
         run: npm run build
       - name: Upload pages artifact
